[workspace]
members = []
resolver = "2"

[workspace.package]
authors = ["Nikola Hristov"]
documentation = "https://Docs.Land.playform.cloud/"
edition = "2021"
homepage = "https://Land.playform.cloud/"
license-file = "LICENSE"
publish = false
readme = "README.md"
repository = "https://github.com/CodeEditorLand/Dependency"
